# sushibox-inari

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.vi.md  THIRD_PARTY.md
.github/ISSUE_TEMPLATE/: bug_report.yml
crates/inari-api/: Cargo.toml
crates/inari-api/src/: lib.rs  mcp.rs
crates/inari-cli/: Cargo.toml
crates/inari-cli/src/: lib.rs  main.rs  supervisor.rs
crates/inari-cli/src/commands/: menu.rs  mod.rs  panel.rs  restart.rs  start.rs  status.rs  stop.rs
crates/inari-core/: Cargo.toml
crates/inari-core/src/: config.rs  job.rs  lib.rs  paths.rs  process.rs  runtime.rs  settings.rs  startup.rs  state.rs
crates/inari-lua/: Cargo.toml
crates/inari-lua/src/: lib.rs  loader.rs
flavors/: default.lua
panel/: .gitignore  README.md  nuxt.config.ts  package.json
panel/app/: app.config.ts
panel/app/assets/css/: main.css
panel/app/components/: FlagIcon.vue
panel/app/composables/: useLocale.ts
panel/app/pages/: index.vue
runtime/: manifest.toml
scripts/: fetch-runtime.ps1  package-portable.ps1  release-check.ps1  smoke-desktop.ps1
sites/default/: health.php  index.php
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
