[package]
name    = "inari-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "inari_cli"
path = "src/lib.rs"

# Console-subsystem CLI for automation / AI. GUI is now the Tauri app (src-tauri).
[[bin]]
name = "inari-cli"
path = "src/main.rs"

[dependencies]
inari-core.workspace         = true
inari-lua.workspace          = true
inari-api.workspace          = true
anyhow.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.28"
ratatui    = "0.28"
sysinfo    = "0.32"
