[package]
name    = "inari-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
] }
